feat: 1. Add docker-compose. 2. Add environment variable loading to service 3. Add Health check endpoint to server
