# shared/pkg/openapi/reviewer/v1/oas_response_encoders_gen.go
@@ -11,6 +11,39 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
+func encodeHealthGetResponse(response HealthGetRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *HealthResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(200)
+		span.SetStatus(codes.Ok, http.StatusText(200))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *ErrorResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(500)
+		span.SetStatus(codes.Error, http.StatusText(500))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodePullRequestCreatePostResponse(response PullRequestCreatePostRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *PullRequestCreatePostCreated:
