# shared/pkg/openapi/reviewer/v1/oas_validators_gen.go
@@ -70,6 +70,8 @@ func (s ErrorResponseErrorCode) Validate() error {
 		return nil
 	case "NOT_FOUND":
 		return nil
+	case "SERVICE_UNAVAILABLE":
+		return nil
 	default:
 		return errors.Errorf("invalid value: %v", s)
 	}
